[tool.poetry]
name = "vimeo-audio-video"
version = "0.1.0"
description = ""
authors = ["see readme"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.54.1"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
